// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Database dev 1`] = `
Object {
  "database": "db.sqlite",
  "entities": Array [
    "server/entity/account/*.ts",
  ],
  "migrations": Array [
    "server/migration/**/*.ts",
  ],
  "subscribers": Array [
    "server/subscriber/**/*.ts",
  ],
  "synchronize": true,
  "type": "sqlite",
}
`;

exports[`Database prod 1`] = `
Object {
  "database": "test",
  "entities": Array [
    "server/entity/account/*.ts",
  ],
  "host": "localhost",
  "migrations": Array [
    "server/migration/**/*.ts",
  ],
  "password": "test",
  "port": 5432,
  "subscribers": Array [
    "server/subscriber/**/*.ts",
  ],
  "synchronize": true,
  "type": "postgres",
  "username": "test",
}
`;
